--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second ripo</title>
 </head>
 <body>
+    <h1>I can push now</h1>
+    <h2>mama i can code now</h2>
     
 </body>
 </html>
