--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second ripo</title>
     <link rel="stylesheet" href="style.css">
-    
+    <img src="download.png.jpg" alt="">
 </head>
 <body>
     <h1>I can push now</h1>
